--- a/index.html
+++ b/index.html
@@ -26,35 +26,36 @@
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--no confundir con la imagen representativa del sitio-->
-<link rel="icon" type="image/png" href="media/favicon.png" />	
+<link rel="icon" type="image/png" href="media/favicon.png" />
 <!--ahora vinculamos los estilos-->
-<link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:300,600" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Ubuntu+Condensed" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
 </head>
 <body>
 <div id="contenido">
 <header>
-	<h1>NOMBRE DUPLA</h1>
-	<h2>pongan aquí su slogan winner</h2>
+	<h1>JAVIERA MONTEALEGRE</h1>
+	<h2>PARALELEPIPEDO</h2>
 </header>
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
 	<source src="media/video.mp4" type="video/mp4">
 	<p>Tu navegador no soporta el elemento, actualízate.</p>
 </video>
-<h3>QUIENES SOMOS</h3>
+<h3>QUIEN SOY</h3>
 <div id="somos">
 	<div class="dupla primera">
-		<h4>NOMBRE APELLIDO</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Praesent euismod et urna vitae aliquam aliquam.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<h4>DISEÑADORA GRAFICA</h4>
+		<h5>Una historia detrás de cada diseño</h5>
+		<p>Ilustraciones de todo tipo y logos a tu gusto</p>
+
+
 	</div><!--/dupla primera-->
 	<div class="dupla segunda">
-		<h4>NOMBRE APELLIDO</h4>
-		<h5>Slogan personal winner</h5>
-		<p>Suspendisse dapibus aliquam lorem ac congue.</p>
-		<address><a href="mailto:mail@mail.com">mail@mail.com</a></address>
+		<h4>DISEÑADORA INDUSTRIAL</h4>
+		<h5>Menos es mas</h5>
+		<p>Muebles, dispositivos y experimentaciones</p>
+		<address><a href="mailto:jmmontealegre@uc.cl">jmmontealegre@uc.cl</a></address>
 	</div><!--/dupla segunda-->
 	<hr />
 </div><!--/somos-->
@@ -62,48 +63,48 @@
 <div id="portafolio">
 	<div class="item">
 		<figure><img src="media/foto-01.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Le Phénix</h4>
+	  	<p>Adaptación de una criatura del Bestiario de Aberdeen al formato del Tarot de Marsella.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-02.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Amber ale</h4>
+	  	<p>Etiqueta para cerveza Amber Ale de la cervecería Szot.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-03.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Jupiter y los sapos</h4>
+	  	<p>Ilustración de una escena de una de las fábulas de Esopo</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Bayá</h4>
+	  	<p>Creación de packaging y marca para emprendimiento de infusiones de zanahoria.</p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-04.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+		<figure><img src="media/foto-041.jpg"/></figure>
+	  	<h4>Leka</h4>
+	  	<p>Logo para tienda de mascotas.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-05.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Silla de alambre</h4>
+	  	<p>Planimetría de la estructura.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-06.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Studio</h4>
+	  	<p>Mueble multifuncional para estudiantes de habitabilidad reducida.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-07.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Baldosa de luz</h4>
+	  	<p>Experimentación con yeso y resina, con el objetivo de llegar un objeto lumínico.</p>
 	</div><!--/item-->
 	<div class="item">
 		<figure><img src="media/foto-08.jpg"/></figure>
-	  	<h4>Lorem ipsum</h4>
-	  	<p>Nulla pretium non sapien eget fermentum.</p>
+	  	<h4>Rubia al vapor</h4>
+	  	<p>Etiqueta para cerveza Rubia al Vapor de la cervecería Szot.</p>
 	</div><!--/item-->
 </div><!--/portafolio-->
 
