--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <meta name="title" content="NOMBRE DUPLA">
-<title>NOMBRE DUPLA</title>
+<title>JMM</title>
 <!-- Search Engine -->
 <meta name="description" content="cambiar">
 <meta name="image" content="cambiar por una URL, debes deben la imagen en línea">
@@ -26,7 +26,7 @@
 <meta name="og:locale" content="es_CL">
 <meta name="og:type" content="website">
 <!--no confundir con la imagen representativa del sitio-->
-<link rel="icon" type="image/png" href="media/favicon.png" />
+<link rel="icon" type="image/png" href="media/jake.png" />
 <!--ahora vinculamos los estilos-->
 <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed|Ubuntu+Condensed" rel="stylesheet">
 <link rel="stylesheet" href="estilo.css" type="text/css">
@@ -40,7 +40,7 @@
 <video autoplay loop preload="auto" poster="media/video.jpg">
 	<source src="media/video.webm" type="video/webm">
 	<source src="media/video.mp4" type="video/mp4">
-	<p>Tu navegador no soporta el elemento, actualízate.</p>
+	<p></p>
 </video>
 <h3>QUIEN SOY</h3>
 <div id="somos">
@@ -82,12 +82,12 @@
 	  	<p>Creación de packaging y marca para emprendimiento de infusiones de zanahoria.</p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-041.jpg"/></figure>
+		<figure><img src="media/foto-05.jpg"/></figure>
 	  	<h4>Leka</h4>
 	  	<p>Logo para tienda de mascotas.</p>
 	</div><!--/item-->
 	<div class="item">
-		<figure><img src="media/foto-05.jpg"/></figure>
+		<figure><img src="media/foto-041.jpg"/></figure>
 	  	<h4>Silla de alambre</h4>
 	  	<p>Planimetría de la estructura.</p>
 	</div><!--/item-->
